--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -1,10 +1,36 @@
-﻿.calContainer {
+﻿.monthDiv {
+	text-align: center;
+	background-color: #e9e9e9;
+	margin-bottom: 5px;
+	margin-top: 5px;
+	min-height: 30px;
+}
+
+.monthDivItem {
+	display: inline-block;
+}
+
+.prevMonth {
+	float: left;
+	cursor: pointer;
+}
+
+.nextMonth {
+	float: right;
+	cursor: pointer;
+}
+
+.monthText {
+	margin-top: 5px;	
+}
+
+.calContainer {
     max-width: 225px;
+	border: 1px solid #808080;
+	background-color: #e9e9e9;
 }
 .calWrapperHeaderDiv {
     max-width: 215px;
-    border: 1px solid #808080;
-    border-bottom: none;
     background-color: whitesmoke;
     padding: 5px;
 
@@ -21,9 +47,7 @@
 }
 
 .calWrapperDiv {
-    max-width: 215px;
-    border: 1px solid #808080;
-    border-top:none;
+    max-width: 215px;    
     background-color: whitesmoke;
     padding: 5px;
 
